# mx_logging

./: README.md  config.py  setup.cfg
src/mxlogging_m3lvx/: __init__.py
src/mxlogging_m3lvx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mxlogging_m3lvx/log_record/: LogRecord.py  LogRecordManager.py  LogRecordManagerMeta.py
src/mxlogging_m3lvx/logging_handler/: MXLoggingHandler.py
src/mxlogging_m3lvx/web/: MXLoggingUI.py
src/mxlogging_m3lvx/web/app/: __init__.py
src/mxlogging_m3lvx/web/app/logs/: controllers.py  models.py
src/mxlogging_m3lvx/web/app/static/css/: style.css
src/mxlogging_m3lvx/web/app/templates/layouts/: layoutdefault.html
src/mxlogging_m3lvx/web/app/templates/logs/: index.html  logrecordmodal.html
src/mxlogging_m3lvx/web/app/templates/partials/: footer.html  footerscripts.html  header.html  navbar.html  sidebar.html
src/mxlogging_m3lvx/web/websocketserver/: __init__.py  websocketserver.py
