[metadata]
name = mxlogging_m3lvx
version = 0.0.1
author = Melas KOTIN
author_email = melaskotin@gmail.com
description = UI Logging Handler for pytho,
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls = 
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
    flask
    flask_socketio
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = *.*